kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
  labels:
    app: professional-project
spec:
  type: LoadBalancer
  selector:
    app: professional-project
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: https
    protocol: TCP
    port: 443
    targetPort: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
